--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,17 @@ var/
 .installed.cfg
 *.egg
 
+# exclude data by default
+!/data/
+/data/*
+!/data/raw/
+/data/raw/*
+!/data/raw/*.zip
+
+# exclude figures
+*.jpg
+*.png
+
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
