--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,11 @@
 -e .
 
 # external requirements
-click
-Sphinx
-coverage
+torch===1.3.1
+torchvision===0.4.2
+opencv-python
+matplotlib
+Pillow
+numpy
 awscli
-flake8
 python-dotenv>=0.5.1
