--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,9 @@ var/
 *.jpg
 *.png
 
+# include cnn architecture picture
+!/src/visualization/cnn_arch.png
+
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
